# project

./: README.md  docker-compose.yml
airflow/dags/: ecommerce_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fct_orders.sql  fct_orders.yml
dbt/models/staging/: stg_orders.sql  stg_orders.yml
infra/postgres/: init.sql
ingestion/: pyproject.toml
ingestion/app/: config.py  csv_loader.py
